# updater-supervisor

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
files/: cron  hook_postupdate  immediate_reboot.init
svupdater/: __init__.py  __main__.py  _board.py  _pidlock.py  _supervisor.py  approvals.py  autorun.py  branch.py  changelog.py  const.py  exceptions.py  hook.py  l10n.py  lists.py  msgtrace.py  notify.py  packages.py  prerun.py  utils.py
