[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svupdater"
version="1.5.6"
dynamic = []
description = "Supervising application and library for updater-ng."
readme = "README.md"
license = "MIT"
authors = [
    { name = "CZ.NIC", email = "packaging@turris.cz" },
    { name = "z. s. p. o." },
]
dependencies = [
    "crontab",
    "distro",
    "packaging",
    "pyuci @ git+https://gitlab.labs.nic.cz/turris/pyuci.git",
]

[project.scripts]
updater-supervisor = "svupdater.__main__:main"

[project.urls]
Homepage = "https://gitlab.nic.cz/turris/updater/supervisor"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "/svupdater",
]
